fix(scrollbar): Thinner scrollbar

--- a/frappe/public/scss/desk/scrollbar.scss
+++ b/frappe/public/scss/desk/scrollbar.scss
@@ -26,6 +26,6 @@ html {
 }
 
 body::-webkit-scrollbar {
-	width: 12px !important;
-	height: 12px !important;
+	width: 8px !important;
+	height: 8px !important;
 }
